fixed vers-number on mobile view

--- a/asset/common/scss/layout/_core.scss
+++ b/asset/common/scss/layout/_core.scss
@@ -49,6 +49,11 @@ h3 {
   padding: 5px;
   z-index: 2000;
   font-size: 10px;
+
+  @include breakpoint(mobile){
+    left: 50%;
+      @include translate3d(-50%, 0, 0);
+  }
 }
 
 
